objects/BillingSummaryTemplate__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Client type specific information to be used in Billing Summary emails.</description>
    <fields>
        <fullName>Email1__c</fullName>
        <label>Email1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email2__c</fullName>
        <label>Email2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FromName__c</fullName>
        <label>FromName</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone1__c</fullName>
        <label>Phone1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone2__c</fullName>
        <label>Phone2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone3__c</fullName>
        <label>Phone3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>BillingSummaryTemplate</label>
</CustomObject>